add drug form.html and css

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -29,7 +29,8 @@
     <nav>
       <ul>
         <li><a href="{% url 'drug-index' %}">Medications</a></li>
-        <li><a href="/about">About</a></li>
+        <li><a href="{% url 'drug-create' %}">Add Med</a></li>
+        <li><a href="{% url 'about' %}">About</a></li>
       </ul>
     </nav>
   </header>
