--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -28,9 +28,15 @@
     </div> {% endcomment %}
     <nav>
       <ul>
-        <li><a href="{% url 'drug-index' %}">Medications</a></li>
-        <li><a href="{% url 'drug-create' %}">Add Med</a></li>
-        <li><a href="{% url 'about' %}">About</a></li>
+        {% if user.is_authenticated %}
+          <li><a href="{% url 'drug-index' %}">Medications</a></li>
+          <li><a href="{% url 'drug-create' %}">Add Med</a></li>
+          <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'logout' %}">Log out</a></li>
+        {% else %}
+          <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'home' %}">Login</a></li>
+        {% endif %}
       </ul>
     </nav>
   </header>
