--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -16,5 +16,16 @@
     alt="Text reads: Cat Collector"
   /> {% endcomment %}
 </section>
+{% if not user.is_authenticated %}
+  <section>
+    <form class='login' action="{% url 'home' %}" method="post">
+      {% csrf_token %}
+      <h1>Login</h1>
+      {{ form.as_p }}
+      <input type="hidden" name="next" value="{{ next }}">
+      <button class='btn submit' type="submit">Login</button>
+    </form>
+  </section>
+{% endif %}
 
 {% endblock %}
