--- a/main_app/static/css/home.css
+++ b/main_app/static/css/home.css
@@ -1,22 +1,44 @@
 main {
   display: flex;
-  align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
+  align-items: center;
+  padding-top: 200px;
+  padding-left: 75px;
+  padding-right: 75px;
   height: 100%;
 }
 
-main > section {
-  width: 100%;
-  padding: 10px 8px;
+.login-box {
   display: flex;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
-  flex-direction: column;
+  align-items: center;
+  height: 375px;
+  width: 750px;
+  box-sizing: border-box;
+  box-shadow: rgba(0, 0, 0, 0.33) 0px 0px 10px 10px;
+  text-align: center;
+  border-radius: 15px;
 }
 
-.drug-container {
-  width: 80%;
+section {
+  flex-basis: 100%;
+  flex: 1;
+  height: 100%;
+}
+
+.logo-container {
+  background-image: url("/static/images/mindful-logo.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-clip: padding-box;
+  border-radius: 15px 0px 0px 15px;
+}
+
+.login-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .login {
@@ -50,7 +72,7 @@ main > section {
 }
 
 .login .btn {
-  align-self: flex-end;
   margin-right: 0;
   margin-top: 16px;
+  width: 100px;
 }
