--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -7,25 +7,21 @@
 
 {% block content %}
 
-<section class="logo-container">
-  {% comment %} <div class="cat-container">
-    <img src="{% static 'images/splash.svg' %}" alt="The Cat Collector Cat" />
-  </div>
-  <img 
-    src="{% static 'images/logotype.svg' %}" 
-    alt="Text reads: Cat Collector"
-  /> {% endcomment %}
-</section>
+
 {% if not user.is_authenticated %}
-  <section>
-    <form class='login' action="{% url 'home' %}" method="post">
-      {% csrf_token %}
-      <h1>Login</h1>
-      {{ form.as_p }}
-      <input type="hidden" name="next" value="{{ next }}">
-      <button class='btn submit' type="submit">Login</button>
-    </form>
-  </section>
+  <div class="login-box">
+    <section class="logo-container">
+    </section>
+    <section class="login-container">
+      <form class='login' action="{% url 'home' %}" method="post">
+        {% csrf_token %}
+        <h1>Login</h1>
+        {{ form.as_p }}
+        <input type="hidden" name="next" value="{{ next }}">
+        <button class='btn submit' type="submit">Login</button>
+      </form>
+    </section>
+  </div>  
 {% endif %}
 
 {% endblock %}
