--- a/main_app/static/css/form.css
+++ b/main_app/static/css/form.css
@@ -1,3 +1,9 @@
+main {
+  padding-top: 50px;
+  padding-left: 200px;
+  padding-right: 200px;
+}
+
 .form-container {
   display: flex;
   flex-direction: column;
@@ -34,6 +40,6 @@ td > textarea {
 }
 
 .btn {
-  align-self: flex-end;
+  align-self: center;
   margin-right: 40px;
 }
