--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -14,6 +14,9 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Literata:ital,opsz,wght@0,7..72,200..900;1,7..72,200..900&display=swap')
   </style>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap')
+    </style>
   <title>Mindful Dose</title>
   <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
   {% block head %}
