--- a/main_app/templates/signup.html
+++ b/main_app/templates/signup.html
@@ -9,7 +9,7 @@
 
 <div class="page-header">
   <h1>Sign Up</h1>
-  {% comment %} <img src="{% static 'images/nerd-cat.svg' %}" alt="A cat using a computer"/> {% endcomment %}
+  <img src="{% static 'images/mindful.png' %}" alt="Invest  in yourself"/>
 </div>
 {% if error_message %}
   <p class="red-text">{{ error_message }}</p>
@@ -19,7 +19,7 @@
   <table>
     {{ form.as_table }}
   </table>
-  <button type="submit" class="btn submit">Submit!</button>
+  <button type="submit" class="btn submit">Submit</button>
 </form>
 
 {% endblock %}
