update and add css to confirm delete med

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -9,13 +9,16 @@
   <link
     rel="shortcut icon"
     type="image/png"
-    href=""
+    href="{% static 'images/favicon.png' %}"
   >
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Literata:ital,opsz,wght@0,7..72,200..900;1,7..72,200..900&display=swap')
+    @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&display=swap')
   </style>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap')
+    </style>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap')
     </style>
   <title>Mindful Dose</title>
   <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
