--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -35,9 +35,9 @@ body {
   --button-bg: rgb(245, 245, 245);
   --button-bg-hover: rgb(226, 226, 226);
   --submit: rgb(26, 128, 0);
-  --warn: rgb(255, 102, 0);
-  --danger: rgb(220, 20, 30);
-  --secondary: rgb(57, 57, 57);
+  --warn: rgb(246, 161, 43);
+  --danger: rgb(195, 19, 37);
+  --secondary: rgb(58, 84, 218);
   --card-box-shadow: 5px 5px 6px -1px #AAA;
   --font-xtreme: 4.2rem;
   --font-xxl: 5rem;
@@ -79,9 +79,8 @@ nav a {
   text-decoration: none;
   color: var(--text-color);
   text-shadow: 0.5px 0.5px 0.5px rgb(56, 83, 218);
-  font-size: 20px;
-  font-family: "DM Sans", sans-serif;
-  font-optical-sizing: auto;
+  font-size: 22px;
+  font-family: "DM Serif Text", serif;
   font-weight: 700;
   font-style: normal;
 }
@@ -117,21 +116,24 @@ nav li {
 .page-header {
   display: flex;
   align-items: center;
-  margin: 40px;
+  margin: 75px;
 } 
 
 .btn {
   font-size: var(--font-l);
   padding: 8px 16px;
   border-radius: 6px;
-  border-width: 2px;
+  border-width: 3px;
   border-style: solid;
   text-decoration: none;
   background-color: var(--button-bg);
   font-weight: 600;
   cursor: pointer;
-  font-family: inherit;
   margin-right: 10px;
+  font-family: "DM Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
 }
 
 .btn:hover {
