--- a/main_app/static/css/form.css
+++ b/main_app/static/css/form.css
@@ -2,6 +2,7 @@ main {
   padding-top: 50px;
   padding-left: 200px;
   padding-right: 200px;
+  height: 100%;
 }
 
 .form-container {
@@ -14,6 +15,7 @@ table {
   padding: 0 40px;
   width: 100%;
   border-spacing: 0 20px;
+  max-width: 1000px;
 }
 
 th {
