--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,13 +1,26 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
+{% load static %}
+
+{% block head %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/about.css' %}"/>
+{% endblock %}
 
 {% block content %}
 
-<h1>Welcome to Mindful Dose!</h1>
-<hr />
-<p class="page-content">
-  Mindful Dose allows a user to keep track of their medications in various ways. Whether it be to find a way to stay more consistent with taking your vitamins and supplements or to simply have a way to stay on top of your medications. With Mindful Dose, one can document doses and keep a log of their medication history. 
-
-  Stay tuned for updates!
-</p>
+<div class="about-container">
+  <div class="logo-about">
+    <img src="{% static 'images/mindful-logo.png' %}" alt="Mindful Dose Logo" />
+  </div>
+  <div class="about-body">
+    <h1>Welcome to Mindful Dose!</h1>
+    <hr />
+    <p class="page-content">
+      Mindful Dose allows a user to keep track of their medications in various ways. Whether it be to find a way to stay more consistent with taking your vitamins and supplements or to simply have a way to stay on top of your medications. With Mindful Dose, one can document doses and keep a log of their medication history. 
+    </p>
+    <p class="page-content">
+      Stay tuned for updates!
+    </p>
+  </div>
+</div>
 
 {% endblock %}
