update css and add github

--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -179,3 +179,13 @@ nav li {
 .page-content {
   font-size: var(--font-reg);
 }
+
+footer{
+  margin-top: auto;
+  padding-top: 50px;
+}
+
+footer img {
+  width: 50px;
+  padding: 10px;
+}
