--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -54,5 +54,13 @@
     {% block content %}
     {% endblock %}
   </main>
+  <footer>
+    <a href="https://github.com/BriannaRocha">
+      <img 
+        src="{% static "images/github.png" %}"
+        alt="Github Link"
+      >
+    </a>
+  </footer>
 </body>
 </html>
